--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "**/.*"
   ],
   "dependencies": {
-    "jquery": ">=1.9.1 <2.0.0",
+    "jquery": ">=1.9.1",
     "filament-fixed": ">=0.1.1",
     "qunit": ">=1.12.0"
   }
